manually trigger sequence lookup
We manually trigger sequence lookup so that we do not need to perform a
flush when Fichier is stored.